--- a/AllBuild/AllBuild.csproj
+++ b/AllBuild/AllBuild.csproj
@@ -125,7 +125,7 @@ del "$(TargetDir)\CorePlugin.gzideplugin"
     <PostBuildEvent>rm -f "$(TargetPath)"
 
 rm -f "$(TargetDir)CorePlugin.gzideplugin"
-"$(SolutionDir)Utils\BuildUtils\GZIDE_BuildUtils.exe" ZipFolderOverwrite "$(SolutionDir)CorePlugin" "$(TargetDir)CorePlugin.gzideplugin"</PostBuildEvent>
+"$(SolutionDir)Utils\BuildUtils\GZIDE_BuildUtils" ZipFolderOverwrite "$(SolutionDir)CorePlugin" "$(TargetDir)CorePlugin.gzideplugin"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
