--- a/CorePlugin/packages.config
+++ b/CorePlugin/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net45" />
+  <package id="Antlr4" version="4.6.6" targetFramework="net472" developmentDependency="true" />
+  <package id="Antlr4.CodeGenerator" version="4.6.6" targetFramework="net472" developmentDependency="true" />
+  <package id="Antlr4.Runtime" version="4.6.6" targetFramework="net472" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net472" />
 </packages>
